tests/compile_fail/borrow_mut/unit.rs
#[derive(derive_more::BorrowMut)]
struct Foo;

fn main() {}
